@@ -128,6 +128,23 @@ Table of Contents
 
 2.  Conventions Used in This Document
 
+<div class='Verified-endnote-styling' id='eid1'>
+<pre>
+<b><i>Editorial <a href='https://www.rfc-editor.org/errata/eid1'>Errata 1</a> updates this document as follows:</i></b>
+
+<b>Section:</b> 2 &lt;but not 2.1&gt;
+
+<b>Original Text:</b>
+
+Section 6.4.1.1 of [RFC7530] has &quot; and &lt; in them for &#x27; issues
+
+<b>Corrected Text:</b>
+
+Section 6.4.1.1.9 of [RFC753A] does not have &quot; and &lt; &lt; in them for &#x27; problems
+</pre>
+<b>Notes:</b><br/>
+Correct where the item points to call sip:&lt;IESG&gt;is@Messed up &lt; when going &quot; for broke but 薒 is not &amp;larr;
+</div>
    The key words &quot;MUST&quot;, &quot;MUST NOT&quot;, &quot;REQUIRED&quot;, &quot;SHALL&quot;, &quot;SHALL NOT&quot;,
    &quot;SHOULD&quot;, &quot;SHOULD NOT&quot;, &quot;RECOMMENDED&quot;, &quot;NOT RECOMMENDED&quot;, &quot;MAY&quot;, and
    &quot;OPTIONAL&quot; in this document are to be interpreted as described in
@@ -301,26 +318,6 @@ Acknowledgments
 
 Authors&#x27; Addresses
 
-<div class='Verified-endnote-styling' id='eid1'>
-<pre>
-<b><i>Editorial <a href='https://www.rfc-editor.org/errata/eid1'>Errata 1</a> updates this document as follows:</i></b>
-
-<b>Section:</b> Authors&#x27; Addresses
-
-<b>Original Text:</b>
-
-None
-
-<b>Corrected Text:</b>
-
-John Doe
-White Hat, Inc.
-
-Email: john.doe@whitehat.edu
-</pre>
-<b>Notes:</b><br/>
-THere is a missing author in the text
-</div>
    J. Bruce Fields
    Red Hat, Inc.
 
