@@ -1,0 +1,19 @@
+[
+    {
+        "errata_id": 1,
+        "doc-id": "RFC8275",
+        "errata_status_code": "Verified",
+        "errata_status_code": "Editorial",
+        "section": "2 <but not 2.1>",
+        "orig_text": "Section 6.4.1.1 of [RFC7530] has \" and < in them for ' issues",
+        "correct_text": "Section 6.4.1.1.9 of [RFC753A] does not have \" and < < in them for ' problems",
+        "notes": "Correct where the item points to call sip:<IESG>is@Messed up < when going \" for broke but \u8592 is not &larr;",
+        "submit_date": "2007-07-19",
+        "submitter_name": "Test Spec <foo@example.com>",
+        "verifier_id": 1,
+        "verifier_name": "Test Spec <bar@eample.com>",
+        "update_date": "2008-11-13 10:13:51",
+        "status_tag": "Verified",
+        "section2": "2"
+    }
+]
