@@ -1,3 +1,10 @@
+rfc-errata (0.1.4) distribution(s); urgency=low
+
+	* The text taken from the errata file input needs to be HTML quoted as well as the RFC
+	* Make the single rfc command line parsing nicer
+
+-- Jim Schaad <ietf@augustcellars.com>  Fri 31 May 2019 12:00:00 -0800
+
 rfc-errata (0.1.3) distribution(s); urgency=low
 
 	* Add better retry logic on HTTPS session failures.
